<resources>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_name" translatable="false">Room Finder</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="loading">Đang tải …</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="full_name">Họ và tên</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="otp">Mã OTP</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="address">Địa chỉ</string>
    <string name="send_back">Gửi lại mã OTP</string>
    <string name="confirm_email">Xác nhận Email</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="success">Thành công!</string>
    <string name="welcome" translatable="false">WELCOME!</string>
    <string name="create_password">Tạo mật khẩu mới</string>
    <string name="home">Trang chủ</string>
    <string name="post">Bài đăng</string>
    <string name="posts">bài đăng</string>
    <string name="search">Tìm kiếm …</string>
    <string name="search_filter">Tìm kiếm</string>
    <string name="favorite">Yêu thích</string>
    <string name="profile">Thông tin tài khoản</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="my_posts">Bài đăng của tôi</string>
    <string name="language">Ngôn ngữ</string>
    <string name="set_location">Thiết lập vị trí</string>
    <string name="location">Vị trí</string>
    <string name="logout">Đăng xuất</string>
    <string name="contact_support">Liên hệ - Hỗ trợ</string>
    <string name="theme">Giao diện</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="setting">Cài đặt</string>
    <string name="change_infor">Thay đổi thông tin</string>
    <string name="upgrade">Cập nhập</string>
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="no_found">Không tìm thấy kết quả</string>
    <string name="filter">Lọc</string>
    <string name="application">Áp dụng</string>
    <string name="price_range">Khoản giá</string>
    <string name="acreage_range">Khoản diện tích</string>
    <string name="area">Khu vực</string>
    <string name="category">Danh mục</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="description_information">Thông tin mô tả</string>
    <string name="favourite">Yêu thích:</string>
    <string name="report">Báo cáo</string>
    <string name="post_features">Đặc điểm bài đăng</string>
    <string name="contact_information">Thông tin liên hệ</string>
    <string name="zalo">Nhắn Zalo</string>
    <string name="note">Lưu ý</string>
    <string name="big_map">Xem bản đồ lớn</string>
    <string name="my_posts_favorite">Các bài đăng yêu thích</string>
    <string name="your_posts">Các bài đăng của bạn</string>
    <string name="no_your_favorite">Không có bài đăng bạn yêu thích</string>
    <string name="no_your_posts">Bạn không có bài đăng nào</string>
    <string name="post_add">Thêm bài đăng</string>
    <string name="some_post">• Một số bài đăng khác</string>
    <string name="address_example">Ngõ X, phường Y, xã Z, …</string>
    <string name="phone_number_example">XXX 744 2XXX</string>
    <string name="full_name_example">John Wick</string>
    <string name="title">Tiêu đề</string>
    <string name="description">Mô tả</string>
    <string name="price">Giá cho thuê (triệu VND/tháng)</string>
    <string name="acreage">Diện tích (m\\u00B2)</string>
    <string name="other_content">Nội dung khác</string>
    <string name="images">Hình ảnh</string>
    <string name="choice_images">Chọn ảnh</string>
    <string name="province">Tỉnh / Thành phố</string>
    <string name="district">Quận / Huyện</string>
    <string name="ward">Xã / Phường</string>
    <string name="village">Ngõ / Thôn / Phố</string>
    <string name="get_now_location">Lấy vị trí hiện lại</string>
    <string name="location_not_found">Không tìm thấy vị trí</string>
    <string name="posting">Đăng bài</string>
    <string name="delete_post">Xóa bài đăng</string>
    <string name="update_post">Sửa bài đăng</string>
    <string name="delete_post_confirm">Xác nhận xóa bài đăng này?</string>
    <string name="post_detail">Chi tiết bài đăng</string>
    <string name="post_expire_time">Gia hạn bài đăng</string>
    <string name="expired_post">Các bài đăng đã hết hạn</string>
    <string name="post_id">Mã bài đăng</string>
    <string name="contact">Liên hệ</string>
    <string name="just_now">Vừa xong</string>
    <string name="minutes_ago">phút trước</string>
    <string name="hours_ago">giờ trước</string>"
    <string name="days_ago">ngày trước</string>
    <string name="weeks_ago">tuần trước</string>
    <string name="posted">Đã đăng</string>
    <string name="million_month">triệu/tháng</string>
    <string name="rental_price">Giá thuê</string>
    <string name="total_acreage">Diện tích</string>
    <string name="posting_at">Ngày đăng</string>
    <string name="expired_at">Ngày hết hạn</string>
    <string name="join_from">Tham gia từ</string>
    <string name="invalid_email">Email không đúng định dạng</string>
    <string name="invalid_password">Mật khẩu phải có tối thiểu 8 ký tự</string>
    <string name="invalid_phone_number">Số điện thoại không đúng định dạng</string>
    <string name="invalid_name">Tên phải có ít nhất 2 ký tự</string>
    <string name="error">Có lỗi xảy ra</string>
    <string name="error_otp">Mã OTP không chính xác</string>
    <string name="error_email">Email không tồn tại</string>
    <string name="error_account">Email hoặc mật khẩu không chính xác</string>
    <string name="email_used">Tên email này đã được sử dụng</string>
    <string name="not_result">Không tìm thấy kết quả cho</string>
    <string name="notification">Thông báo</string>
    <string name="clear_all">Xoá tất cả</string>
    <string name="delete">Xoá</string>
    <string name="no_notification">Không có thông báo nào</string>
    <string name="new_post">Bài đăng mới</string>
    <string name="bonus">Có ưu đãi</string>
    <string name="advanced_search">Tìm kiếm nâng cao</string>
    <string name="find_roommates">Tìm người ở ghép</string>
    <string name="select_photo">Vui lòng chọn ảnh</string>
    <string name="change_avatar_successfully">Đổi ảnh đại diện thành công</string>
    <string name="change_avatar_failed">Thay ảnh đại diện thất bại</string>
    <string name="password_changed_successfully">Thay đổi mật khẩu thành công</string>
    <string name="password_change_failed">Đổi mật khẩu thất bại</string>
    <string name="change_infor_successfully">Thay đổi thông tin thành công</string>
    <string name="change_infor_failed">Thay đổi thông tin thất bại</string>
    <string name="full_information_required">Yêu cầu điền đầy đủ thông tin</string>
    <string name="password_not_match">Xác nhận mật khẩu không trùng khớp</string>
    <string name="delete_success">Xoá thành công</string>
    <string name="delete_failed">Lỗi khi xoá</string>
    <string name="not_zalo">Ứng dụng Zalo chưa được cài đặt trên thiết bị</string>
    <string name="not_gmail">Không tìm thấy ứng dụng Gmail</string>
    <string name="posting_success">Đăng bài thành công</string>
    <string name="posting_failed">Đăng bài thất bại</string>
    <string name="edit_post_success">Sửa bài đăng thành công</string>
    <string name="edit_post_failed">Sửa bài đăng thất bại</string>
    <string name="error_title">Tiêu đề phải tối thiểu 30 ký tự và tối đa 100 ký tự</string>
    <string name="error_description">Tối thiểu 50 ký tự và tối đa 3000 ký tự</string>
    <string name="error_price">Yêu cầu nhập giá cho thuê</string>
    <string name="error_acreage">Yêu cầu nhập diện tích</string>
    <string name="error_bonus">Tối đa 200 ký tự</string>
    <string name="invalid_information">Thông tin chỉnh sửa không hợp lệ</string>

    <string name="note_text_one">\u2022 Chỉ đặt khi cọc xác định được chủ nhà và có thỏa thuận biên nhận rõ ràng. Kiểm tra mọi điều khoản và yêu cầu liệt kê tất cả chi phí hàng tháng vào hợp đồng.</string>
    <string name="note_text_two">\u2022 Mọi thông tin liên quan đến tin đăng này chỉ mang tính chất tham khảo. Nếu bạn thấy rằng tin đăng này không đúng hoặc có dấu hiệu lừa đảo, hãy phản ánh với chúng tôi.</string>
    <string name="note_text_three">\u2022 Bạn cần chắc chắn tất cả các thông tin của bài đăng là chính xác, tránh đăng tải những thông tin spam, lừa đảo. Chúng tôi sẽ không chịu trách nhiệm về những thông tin bạn đăng tải.</string>
    <string name="note_text_four">\u2022 Bài đăng sẽ có thời hạn là 30 ngày kể từ ngày đăng, khi hết hạn bài đăng sẽ bị ẩn, bạn có thể tiếp tục ra hạn đăng bài hoặc xóa bài đăng đó.</string>
</resources>