<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_setting"
    app:startDestination="@id/optionFragment">

    <fragment
        android:id="@+id/optionFragment"
        android:name="com.pht.roomfinder.view.setting.OptionFragment"
        android:label="@string/setting"
        android:theme="@style/Theme.RoomFinder" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.pht.roomfinder.view.setting.ProfileFragment"
        android:label="@string/profile"
        android:theme="@style/Theme.RoomFinder" />

    <fragment
        android:id="@+id/avatarFragment"
        android:name="com.pht.roomfinder.view.setting.AvatarFragment"
        android:label="@string/avatar"
        android:theme="@style/Theme.RoomFinder" />

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.pht.roomfinder.view.setting.ChangePasswordFragment"
        android:label="@string/change_password"
        android:theme="@style/Theme.RoomFinder" />


</navigation>