<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.setting.SettingFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="userViewModel"
            type="com.pht.roomfinder.viewmodel.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_transparent"
                android:importantForAccessibility="no"
                android:onClick="@{() -> userViewModel.popBack()}"
                android:padding="7dp"
                android:src="@drawable/arrow_back_icon"
                app:tint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/avatar"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_View_Avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no"
                android:onClick="@{() -> userViewModel.toAvatar()}"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/dark_gray"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_line"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@={userViewModel.user.email}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_line"
                android:enabled="@{userViewModel.uiState.update}"
                android:hint="@string/full_name_example"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={userViewModel.userState.name}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_line"
                android:enabled="@{userViewModel.uiState.update}"
                android:hint="@string/phone_number_example"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:text="@={userViewModel.userState.phone}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_line"
                android:enabled="@{userViewModel.uiState.update}"
                android:hint="@string/address_example"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={userViewModel.userState.address}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                tools:ignore="LabelFor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button_full"
                android:onClick="@{() -> userViewModel.setUpdate(true)}"
                android:text="@string/change_infor"
                android:textColor="@color/white"
                android:visibility="@{userViewModel.uiState.update ? View.GONE : View.VISIBLE}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:visibility="@{userViewModel.uiState.update ? View.VISIBLE : View.GONE}"
            android:weightSum="10">

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"


                android:background="@drawable/custom_button_full"
                android:onClick="@{() -> userViewModel.checkInformation()}"
                android:text="@string/upgrade"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="5"
                android:background="@drawable/custom_button_outline"
                android:onClick="@{() -> userViewModel.setUpdate(false)}"
                android:text="@string/cancel"
                android:textColor="@color/app_color"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</layout>