<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/custom_shape_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_header_dialog"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/otp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_Text_OTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_outline"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/app_color"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_View_Resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/send_back"
        android:textColor="@color/app_color"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_View_Error_OTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="20dp"
        android:textColor="@color/red"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Confirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_button_full"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/custom_button_outline"
            android:text="@string/cancel"
            android:textColor="@color/app_color"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>